Fixed two bugs:
1) The Div100 work I did was not previously extended to login/signup, so overflowing was not working correctly. Added.
2) Made tour a bit more presentable on mobile devices

--- a/src/routes/PrimaryLayout/PrimaryLayout.scss
+++ b/src/routes/PrimaryLayout/PrimaryLayout.scss
@@ -563,6 +563,17 @@ $drawer-z-index: 51;
   .center.map-view {
     overflow-y: auto;
   }
+
+
+  .tourWrapper .tourPrompt .tourGuide {
+    min-width: 40px;
+    height: 40px;
+
+    img {
+      width: 24px;
+      height: 18px;
+    }
+  }
 }
 
 @media screen and (max-width: 375px) {
